Updating to beta kairosdb in order to publish to maven central